Fixed overflow issue on timeline

--- a/src/final/styles/Timeline.module.css
+++ b/src/final/styles/Timeline.module.css
@@ -88,6 +88,7 @@
     .timeline-offset {
         height: 4em !important;
         background-color: var(--black);
+        z-index: 1;
     }
 
     .legend-container {
